# Modul6-ML

./: .gitignore  README.md  pyproject.toml
src/: app.py  klasifikasi_citra.py  klasifikasi_tabular.py  klasifikasi_teks.py
