[project]
name = "Modul6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zul", email = "ul"},
    {name = "", email = ""}
]
dependencies = [
    "streamlit==1.37.0",
    "tensorflow>=2.18.0",
    "joblib>=1.4.2",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

# Pastikan penulisan yang benar untuk 'src' dan 'model' sesuai dengan tujuan
packages = [{ include = "src" }]  # Menambahkan deklarasi folder src untuk kode kamu

[tool.pdm.scripts]
start = "streamlit run src/app.py"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.backend"
